<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/box"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragment.DoorFragment">

    <!-- TODO: Update blank fragment layout -->

    <ImageView
        android:id="@+id/door"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_margin="10dp"
        android:contentDescription="@string/image_door"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.025"
        app:srcCompat="@drawable/closed_door" />

    <ImageView
        android:id="@+id/image_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/door"
        app:srcCompat="@drawable/star"/>

    <ToggleButton
        android:id="@+id/door_mode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/togglebutton"
        android:textOff="@string/auto"
        android:textOn="@string/normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/door"
        app:layout_constraintTop_toBottomOf="@id/image_main" />

    <TextView
        android:id="@+id/door_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/door_mode"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="description" />

    <ImageView
        android:id="@+id/delete_door"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:contentDescription="@string/image_led"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/delete"/>

</androidx.constraintlayout.widget.ConstraintLayout>